--- a/Details/details.html
+++ b/Details/details.html
@@ -17,7 +17,7 @@
       <div class="nav-links" id="navLinks">
         <i class="fa fa-window-close" onclick="hideMenu()"></i>
         <ul>
-          <li><a href="/Home/home.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="/Favourite/favourite.html">Favourite</a></li>
         </ul>
       </div>
