--- a/Favourite/favourite.html
+++ b/Favourite/favourite.html
@@ -12,6 +12,7 @@
     <title>Favourite</title>
   </head>
   <body style="background-color: #181818" onload="showFavList()">
+    <!-- Beginning of nav section -->
     <nav>
       <div class="nav-links" id="navLinks">
         <i class="fa fa-window-close" onclick="hideMenu()"></i>
@@ -22,6 +23,8 @@
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
+    <!-- End of the nav section -->
+    <!-- Fav cards section -->
     <div class="fav-cards"></div>
     <script src="/Favourite/favourite.js"></script>
   </body>
