--- a/Details/details.html
+++ b/Details/details.html
@@ -13,6 +13,7 @@
     <title>Document</title>
   </head>
   <body onload="showDetails()">
+     <!-- Beginning of nav section -->
     <nav>
       <div class="nav-links" id="navLinks">
         <i class="fa fa-window-close" onclick="hideMenu()"></i>
@@ -23,6 +24,8 @@
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
+     <!-- End of the nav section -->
+     <!-- Details section -->
     <div class="details"></div>
     <script src="details.js"></script>
   </body>
