--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link href="/style.css" rel="stylesheet"/>
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+    <link href="/style.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +18,9 @@
     />
   </head>
   <body>
+    <!-- Beginning of header section -->
     <header class="header">
+      <!-- Beginning of navbar section -->
       <nav>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-window-close" onclick="hideMenu()"></i>
@@ -29,6 +31,8 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
+      <!-- End of the header section -->
+      <!-- Beginning of search bar section -->
       <div class="search-bar">
         <h3>Find a Recipe</h3>
         <div class="search-input">
@@ -49,11 +53,15 @@
           </div>
         </div>
       </div>
+      <!-- End of the search bar section -->
     </header>
+    <!-- End of the header section -->
+    <!-- Beginning of search result section -->
     <section class="search-results">
       <div class="search-results-heading"></div>
       <div class="cards"></div>
     </section>
+    <!-- End of the search result section -->
     <script src="/script.js"></script>
   </body>
 </html>
